# plopm

./: .gitignore  .pylintrc  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml
docs/: Makefile  about.html  api.html  contributing.html  examples.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  plopm.config.config.html  plopm.config.html  plopm.core.html  plopm.core.plopm.html  plopm.html  plopm.utils.html  plopm.utils.initialization.html  plopm.utils.mapping.html  plopm.utils.readers.html  plopm.utils.vtk.html  plopm.utils.write.html  plopm.utils.write_oned.html  plopm.utils.write_twod.html  plopm.utils.write_vtk.html  py-modindex.html  related.html  search.html  searchindex.js
docs/_sources/: about.rst.txt  api.rst.txt  contributing.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  plopm.config.rst.txt  plopm.core.plopm.rst.txt  plopm.core.rst.txt  plopm.rst.txt  plopm.utils.initialization.rst.txt  (+6 more)
examples/: DISPERC.INC  DX.INC  FIPNUM.INC  FLUXNUM.INC  GRID.INC  PERMX.INC  PORO.INC  PVBOUNDARIES.INC  SATNUM.INC  SPE11B.DATA  SPE11B.EGRID  SPE11B.INIT  SPE11B.SMSPEC  SPE11B.UNRST  SPE11B.UNSMRY  TABLES.INC  THCONR.INC
paper/: paper.tex
tests/: test_convert_to_vtk.py  test_copilot_suggestions.py  test_difference.py  test_dynamic.py  test_filter.py  test_generic_deck.py  test_gif.py  test_metrics.py  test_multislides.py  test_single.py  test_static.py  test_summary.py  test_wells.py  test_wells_grid.py
(+67 files in other folders)
