[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "plopm"
description = "Simplified and flexible framework for plotting OPM Flow geological models"
authors = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
maintainers = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0"}
keywords = ["opm", "flow", "egrid", "corner-point", "geosciences", "paraview", "vtk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]
dependencies = [
    "alive_progress<=3.3.0",
    "colorcet<=3.1.0",
    "matplotlib<=3.10.7",
    "opm<=2025.10",
    "scipy<=1.16.3"
]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "plopm.__version__"}

[project.scripts]
plopm = "plopm.core.plopm:main"

[project.urls]
Homepage = "https://cssr-tools.github.io/plopm"
Repository = "https://github.com/cssr-tools/plopm"

[tool.setuptools]
packages.find.where = ["src"]
platforms = ["all"]
